Implement skill allowed-tools governance